# dompa

./: .gitignore  API.md  Cargo.toml  README.md  bb.edn  deps.edn  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.builds/: coverage.yml  test.yml
.clj-kondo/: config.edn
.github/workflows/: coverage.yml  node.js.yml  python-package-test.yml  rust.yml  test.yml  tests.yml
dompa/: __init__.py  css_selector_parser.py  dompa.py  dompa_test.py  query_engine.py  serializer.py
dompa/nodes/: __init__.py  block_node.py  inline_node.py  ir_node.py  node.py  node_test.py  serializer.py  text_node.py  void_node.py
dompa/nodes/serializers/: to_html.py
dompa/serializers/: to_html.py
resources/clj-kondo/: config.edn
resources/clj-kondo/hooks/: dompa.clj
src/: dompa.rs  dompa.test.ts  dompa.ts  dompa_tests.rs  index.ts  lib.rs
src/dompa/: coordinates.clj  coordinates.cljc  core.clj  html.cljc  nodes.clj  nodes.cljc  nodes.cljs  templates.cljc  utils.cljc
src/dompa/nodes/: shared.cljc
src/nodes/: element.ts  fragment.ts  ir.ts  text.ts  void.ts
src/serializers/: to-html.ts
test/dompa/: coordinates_test.cljc  html_test.cljc  nodes_test.cljc  round_trip_test.clj  round_trip_test.cljc  templates_test.cljc  utils_test.cljc
test/dompa/html/: michiel_borkent.html
