[package]
name = "dompa"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A lightweight, zero-dependency HTML5 document parser."
keywords = ["html", "html5", "dom", "parser", "serializer"]
categories = ["parser-implementations", "web-programming"]
homepage = "https://github.com/askonomm/dompa"
repository = "https://github.com/askonomm/dompa"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }